--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 
-  <div class="cursor-text" id="cursorText">this is a piece of text that will soon mean something.</div>
-
   <div class="container">
 
-    <!-- Example clickable blocks -->
+    <!-- Fake image blocks (replace with background images later) -->
     <a href="projects/project1.html" class="project-block horizontal" data-title="this is a piece of text that will soon mean something."></a>
     <a href="projects/project2.html" class="project-block vertical" data-title="this is a piece of text that will soon mean something."></a>
     <a href="projects/project3.html" class="project-block horizontal" data-title="this is a piece of text that will soon mean something."></a>
     <a href="projects/project4.html" class="project-block vertical" data-title="this is a piece of text that will soon mean something."></a>
 
   </div>
+
+  <div class="cursor-text" id="cursorText">this is a piece of text that will soon mean something.</div>
 
   <script>
     const cursorText = document.getElementById('cursorText');
