--- a/index.html
+++ b/index.html
@@ -4,21 +4,71 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: white;
+      cursor: none;
+      height: 100vh;
+      overflow: hidden;
+      font-family: 'Times New Roman', serif;
+    }
+
+    .container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    .project-block {
+      position: absolute;
+      background-color: #c0cbb4;
+      transition: transform 0.2s ease;
+      z-index: 1;
+    }
+
+    .project-block.horizontal {
+      width: 240px;
+      height: 180px;
+    }
+
+    .project-block.vertical {
+      width: 180px;
+      height: 240px;
+    }
+
+    .project-block:nth-child(1) { top: 10%; left: 12%; }
+    .project-block:nth-child(2) { top: 45%; left: 20%; }
+    .project-block:nth-child(3) { top: 25%; left: 55%; }
+    .project-block:nth-child(4) { top: 65%; left: 50%; }
+
+    .project-block:hover {
+      transform: scale(1.03);
+    }
+
+    .cursor-text {
+      position: absolute;
+      pointer-events: none;
+      font-size: 0.85rem;
+      color: #7a8b6f;
+      opacity: 0;
+      transition: opacity 0.2s ease;
+      text-transform: lowercase;
+      z-index: 100;
+    }
+  </style>
 </head>
 <body>
 
   <div class="container">
-
-    <!-- Fake image blocks (replace with background images later) -->
-    <a href="projects/project1.html" class="project-block horizontal" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="projects/project2.html" class="project-block vertical" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="projects/project3.html" class="project-block horizontal" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="projects/project4.html" class="project-block vertical" data-title="this is a piece of text that will soon mean something."></a>
-
+    <a href="#" class="project-block horizontal" data-title="this is a piece of text that will soon mean something."></a>
+    <a href="#" class="project-block vertical" data-title="this is a piece of text that will soon mean something."></a>
+    <a href="#" class="project-block horizontal" data-title="this is a piece of text that will soon mean something."></a>
+    <a href="#" class="project-block vertical" data-title="this is a piece of text that will soon mean something."></a>
   </div>
 
-  <div class="cursor-text" id="cursorText">this is a piece of text that will soon mean something.</div>
+  <div class="cursor-text" id="cursorText"></div>
 
   <script>
     const cursorText = document.getElementById('cursorText');
