--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
     .container {
       position: absolute;
       top: 50%;
-      left: 55%;
+      right: 10px;
       transform: translateY(-50%);
       display: flex;
       flex-wrap: wrap;
+      flex-direction: column;
+      align-items: flex-end;
       gap: 10px;
-      max-width: 40vw;
+      max-height: 90vh;
     }
 
     .project-block {
-      background-color: #c0cbb4;
+      background-color: #e6e6e6;
       display: block;
       z-index: 1;
     }
 
-    /* Varied sizes (3:4ish ratio) */
+    /* Varied 3:4ish rectangles with some horizontal & vertical mix */
     .s1 { width: 200px; height: 266px; }
     .s2 { width: 240px; height: 180px; }
     .s3 { width: 160px; height: 213px; }
@@ -46,26 +48,27 @@
       position: absolute;
       pointer-events: none;
       font-size: 0.85rem;
-      color: #7a8b6f;
+      color: #222; /* darker for contrast */
       opacity: 0;
       transition: opacity 0.2s ease;
       text-transform: lowercase;
       z-index: 100;
+      max-width: 200px;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <a href="#" class="project-block s1" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s2" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s3" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s4" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s5" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s6" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s7" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s8" data-title="this is a piece of text that will soon mean something."></a>
-    <a href="#" class="project-block s9" data-title="this is a piece of text that will soon mean something."></a>
+    <a href="#" class="project-block s1" data-title="I can no longer tell the difference between waiting and being."></a>
+    <a href="#" class="project-block s2" data-title="I refuse to be contained in any idea of form."></a>
+    <a href="#" class="project-block s3" data-title="The soul is the last address of all theory."></a>
+    <a href="#" class="project-block s4" data-title="One does not see the kingdom of heaven unless one is poor."></a>
+    <a href="#" class="project-block s5" data-title="I do not doubt I am bound for the edge of something."></a>
+    <a href="#" class="project-block s6" data-title="My thinking moves like a ghost through a wall."></a>
+    <a href="#" class="project-block s7" data-title="My voice breaks everything and reassembles it."></a>
+    <a href="#" class="project-block s8" data-title="I had to make a world out of my need."></a>
+    <a href="#" class="project-block s9" data-title="There's something wrong with the sky and it's me."></a>
   </div>
 
   <div class="cursor-text" id="cursorText"></div>
@@ -74,19 +77,28 @@
     const cursorText = document.getElementById('cursorText');
     const blocks = document.querySelectorAll('.project-block');
 
-    document.addEventListener('mousemove', (e) => {
-      cursorText.style.left = e.pageX + 15 + 'px';
-      cursorText.style.top = e.pageY + 15 + 'px';
-    });
+    // Light pastel random background color generator
+    function randomPastel() {
+      const hue = Math.floor(Math.random() * 360);
+      return `hsl(${hue}, 70%, 85%)`; // light pastel
+    }
 
     blocks.forEach(block => {
+      block.style.backgroundColor = randomPastel();
+
       block.addEventListener('mouseenter', () => {
         cursorText.textContent = block.getAttribute('data-title');
         cursorText.style.opacity = '1';
       });
+
       block.addEventListener('mouseleave', () => {
         cursorText.style.opacity = '0';
       });
+    });
+
+    document.addEventListener('mousemove', (e) => {
+      cursorText.style.left = e.pageX + 15 + 'px';
+      cursorText.style.top = e.pageY + 15 + 'px';
     });
   </script>
 
